verschiedene Verschönerungen am Layout
Beauty is in the eye of the beholder.

--- a/ckanext/berlin/theme/public/css/extra.css
+++ b/ckanext/berlin/theme/public/css/extra.css
@@ -1,8 +1,9 @@
 body {
-  background-color: rgb(31,151,121);
+/*  background-color: rgb(31,151,121);*/
+/*  background-color: red;*/
 }
 
-*.footer {
+/**.footer {
   color: #ffffff;
 }
-
+*/
